# tp-link-vigi-sdk

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 00-index.md  01-project-plan.md  02-references.md  03-api-scope.md  04-architecture.md  05-test-strategy.md  06-device-matrix.md  07-codex-instructions.md  08-implementation-checklist.md  09-history.md  10-limitations.md  11-roadmap.md  12-usage-guide.md  project-philosophy.md
docs/adr/: ADR-0001-capability-based-architecture.md  ADR-0002-authentication-strategy.md  ADR-0003-record-search-flow.md  ADR-0004-rtsp-replay-strategy.md  ADR-0005-testing-and-integration-strategy.md  ADR-0006-separate-nvr-and-ipc-auth-transports.md  README.md
examples/: build_replay_url.py  list_devices.py  read_only_workflow.py
src/vigi/: __init__.py  auth.py  auth_provider.py  capabilities.py  client.py  crypto.py  devices.py  exceptions.py  http_transport.py  ipc_auth.py  ipc_control.py  ipc_session.py  models.py  records.py  session.py  stream.py  transport.py  types.py
tests/: test_auth.py  test_auth_provider.py  test_devices.py  test_examples.py  test_imports.py  test_integration_auth.py  test_integration_devices.py  test_integration_ipc_auth.py  test_integration_records.py  test_ipc_auth.py  test_ipc_control.py  test_models.py  test_project_skeleton.py  test_records.py  test_session.py  test_streams.py  test_transport_auth_foundation.py  test_types.py
