[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-link-vigi-sdk"
version = "0.0.0"
description = "Python SDK skeleton for TP-Link VIGI NVR OpenAPI"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage>=7",
    "mypy>=1.8",
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
