[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-link-vigi-sdk"
version = "0.1.0rc1"
description = "Python SDK for TP-Link VIGI NVR OpenAPI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "김건우", email = "gunwookim0221@gmail.com" },
]
keywords = [
    "tp-link",
    "vigi",
    "nvr",
    "openapi",
    "python",
    "sdk",
    "rtsp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/gunwookim0221/tp-link-vigi-sdk"
Repository = "https://github.com/gunwookim0221/tp-link-vigi-sdk"
Issues = "https://github.com/gunwookim0221/tp-link-vigi-sdk/issues"
Documentation = "https://github.com/gunwookim0221/tp-link-vigi-sdk/blob/main/docs/00-index.md"

[project.optional-dependencies]
dev = [
    "coverage>=7",
    "mypy>=1.8",
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
